[package]
name = "rust_learning"
version = "0.1.0"
authors = ["yingliufengpeng <2906631584@qq.com>"]
edition = "2018"
[workspace]
members = [
    "mac",
    'bingbingou',
    'getaver',
    'gui',
]

#[profile.dev]
#opt-level = 0
#
#[profile.release]
#opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac = {path = "./mac"}
bingbingou = {path = "./bingbingou"}
getaver = {path = "./getaver"}
gui = {path = "./gui"}
bingbinggouderive = {path = "./bingbingou/bingbinggouderive"}
maplit = "*"
#rust-crypto = "0.2.36"